tests/paczka2/big_fuzzy/74771966.err
Error in line 10: BGgEkOT40J A731 70,0
Error in line 14: Ftk3Q5k A823 4,6
Error in line 23: Ftk3Q5k S293 271,15
Error in line 19: Ftk3Q5k S293 56,8
Error in line 31: sGMbp7 A823 64,1
Error in line 24: BGgEkOT40J A823 36,4
Error in line 33: BGgEkOT40J A281 47,2
Error in line 36: 5qUea A281 61,7
Error in line 37: BGgEkOT40J S293 93,2
Error in line 39: BGgEkOT40J A281 5,9
Error in line 51: sGMbp7 S293 62,2
Error in line 50: BGgEkOT40J A823 94,0
Error in line 56: BGgEkOT40J A281 12,3
Error in line 55: S293 A823 18,5
Error in line 52: sGMbp7 A823 8,0
Error in line 64: Ftk3Q5k A823 8,02
Error in line 76: clw5XRux S293 22,0
Error in line 78: 5QKynB S293 43,4
Error in line 85: 5QKynB A731 38,4
Error in line 86: Ftk3Q5k A823 16,1
Error in line 94: BGgEkOT40J A731 185,8
Error in line 98: 5QKynB A823 7,1
Error in line 103: 5QKynB S293 71,9
Error in line 107: Ftk3Q5k A731 44,5
Error in line 67: S293 A281 37,8
Error in line 126: 5QKynB A823 9,8
Error in line 113: S293 A823 71,9
Error in line 142: Ftk3Q5k A731 123,65
Error in line 145: clw5XRux A82` `1,2
Error in line 146: sGMbp7 A281 21,3
Error in line 148: BGgEkOT40J S293 5,2
Error in line 143: sGMbp7 A281 86,8
Error in line 154: clw5XRux A823 99,5
Error in line 155: 5qUea S293 67,2
Error in line 160: S293 S293 84,0
Error in line 161: 5QKynB A731 60,7
Error in line 168: 5qUea A~31 153,6
Error in line 180: BGgEkOT40J A823 -2,3
Error in line 178: clw5XRux A281 47,6
Error in line 159: 5qUea A731 34,6
Error in line 179: BGgEkOT40J A823 33,2
Error in line 198: S293 A823 62,3
Error in line 208: BGgEkOT40J A731 245,2
Error in line 183: Ftk3Q5k A731 35,4
Error in line 221: Ftk3Q5k A823 91,6
Error in line 224: Ftk3Q5k A731 43,1
Error in line 235: S293 A281 75,6
Error in line 234: Ftk3Q5k A281 38,5
Error in line 243: S293 A823 :2,1
